Start styling the resume

--- a/11ty/src/_includes/fancyBackground.njk
+++ b/11ty/src/_includes/fancyBackground.njk
@@ -1,5 +1,5 @@
-<div id="fancy-background-canvas"></div>
-<button id="fancy-background-refresh-btn" class="btn btn-lg btn-primary btn-circle fixed tooltip tooltip-left right-4 bottom-4 normal-case text-4xl" data-tip="Regenerate the background pattern" aria-label="Regenerate the background pattern" type="reset">
+<div id="fancy-background-canvas" class="print:hidden"></div>
+<button id="fancy-background-refresh-btn" class="btn btn-lg btn-primary btn-circle fixed tooltip tooltip-left right-4 bottom-4 normal-case text-4xl print:hidden" data-tip="Regenerate the background pattern" aria-label="Regenerate the background pattern" type="reset">
   <i class="fa-solid fa-arrows-rotate"></i>
 </button>
 
