--- a/11ty/src/index.njk
+++ b/11ty/src/index.njk
@@ -73,7 +73,7 @@ layout: layouts/base.njk
   </article>
 </section>
 
-<section class="coding paper prose">
+<section class="coding paper prose [&>img]:mt-0">
   <h2>Do You Code?</h2>
   <p>
     I make a living developing web applications. I jump all around the stack and will do whatever it takes to ship. Need
