--- a/11ty/src/_includes/footer.njk
+++ b/11ty/src/_includes/footer.njk
@@ -14,7 +14,7 @@
       <h3 class="footer-title">Social</h3>
       <div>
         {% for link in social %}
-          <a href="{{ link.href }}" class="btn btn-sm btn-square btn-primary" title="{{ link.label }}">
+          <a href="{{ link.url }}" class="btn btn-sm btn-square btn-primary" title="{{ link.label }}">
             <i class="{{ link.icon }} text-2xl"></i>
           </a>
         {% endfor %}
