--- a/astro/src/pages/index.astro
+++ b/astro/src/pages/index.astro
@@ -23,7 +23,7 @@ const shelves = {
 }
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout>
   <section class="intro paper prose">
     <h2>Glad To Meet You!</h2>
     <p>My name is Eli I only really write in lists, so here's my deal.</p>
