--- a/astro/src/components/Header.astro
+++ b/astro/src/components/Header.astro
@@ -3,51 +3,64 @@ import EmojiText from '../components/EmojiText.astro'
 
 const links = [
   {
-    name: "Home",
-    href: "/",
-    emoji: "🏠",
-    emojiLabel: "little house to denote the home page"
+    name: 'Home',
+    href: '/',
+    emoji: '🏠',
+    emojiLabel: 'little house to denote the home page',
   },
   {
-    name: "Blog",
-    href: "/blog/",
-    emoji: "📝",
-    emojiLabel: "note to denote my blog"
+    name: 'Blog',
+    href: '/blog/',
+    emoji: '📝',
+    emojiLabel: 'note to denote my blog',
   },
   {
-    name: "Feelings",
-    href: "/feelings/",
-    emoji: "🥺",
-    emojilabel: "emotional looking emoji face to denote my feelings"
+    name: 'Feelings',
+    href: '/feelings/',
+    emoji: '🥺',
+    emojiLabel: 'emotional looking emoji face to denote my feelings',
   },
   {
-    name: "Talks",
-    href: "/talks/",
-    emoji: "🗣",
-    emojilabel: "silhouette of person speaking"
+    name: 'Talks',
+    href: '/talks/',
+    emoji: '🗣',
+    emojiLabel: 'silhouette of person speaking',
   },
   {
-    name: "Resume",
-    href: "/resume/",
-    emoji: "📄",
-    emojilabel: "piece of paper representing my resume"
-  }
+    name: 'Resume',
+    href: '/resume/',
+    emoji: '📄',
+    emojiLabel: 'piece of paper representing my resume',
+  },
 ]
 ---
-<header class="navbar bg-base-100 shadow fixed top-0 z-50 pr-8 pl-14 print:hidden">
+
+<header
+  class="navbar bg-base-100 shadow fixed top-0 z-50 pr-8 pl-14 print:hidden"
+>
   <div class="container mx-auto flex flex-wrap">
     <div class="flex-1">
-      <a href="/" itemprop="sameAs" class="btn btn-ghost normal-case text-xl site-name">Eli Gundry</a>
+      <a
+        href="/"
+        itemprop="sameAs"
+        class="btn btn-ghost normal-case text-xl site-name">Eli Gundry</a
+      >
     </div>
     <nav class="flex-none hidden md:flex">
-      <ul class="menu menu-horizontal p-0 [&>li>a:not([aria-current='page'])]:link-neutral">
-        {links.map(link => (
-          <li>
-            <a href={link.href}>
-              <EmojiText emoji={link.emoji} label={link.emojiLabel}>{link.name}</EmojiText>
-            </a>
-          </li>
-        ))}
+      <ul
+        class="menu menu-horizontal p-0 [&>li>a:not([aria-current='page'])]:link-neutral"
+      >
+        {
+          links.map((link) => (
+            <li>
+              <a href={link.href}>
+                <EmojiText emoji={link.emoji} label={link.emojiLabel}>
+                  {link.name}
+                </EmojiText>
+              </a>
+            </li>
+          ))
+        }
         <li>
           <label class="swap swap-flip">
             <input type="checkbox" id="theme-toggle" />
@@ -64,7 +77,10 @@ const links = [
             <div class="swap-on">🙅‍♂️</div>
             <div class="swap-off">🍔</div>
           </label>
-          <ul tabindex="0" class="menu menu-compact dropdown-content bg-base-100 rounded-box w-full">
+          <ul
+            tabindex="0"
+            class="menu menu-compact dropdown-content bg-base-100 rounded-box w-full"
+          >
           </ul>
         </div>
       </nav>
