--- a/astro/src/layouts/Layout.astro
+++ b/astro/src/layouts/Layout.astro
@@ -6,28 +6,54 @@ import config from '../config.ts'
 import '../styles/tailwind.css'
 
 export interface Props {
-  title: string
+  title?: string
   description?: string
 }
 
 const { title, description } = Astro.props
 const latestFeeling = await daylio.getLatest()
 ---
-<!doctype html>
-<html lang="en" itemscope itemtype="https://schema.org/Person" itemid="#eli-gundry">
+
+<!DOCTYPE html>
+<html
+  lang="en"
+  itemscope
+  itemtype="https://schema.org/Person"
+  itemid="#eli-gundry"
+>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>{title ? `${title} | ${config.title}` : config.title}</title>
     <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="generator" content={Astro.generator} />
-    <link rel="alternate" type="application/rss+xml" title="Eli Gundry's Blog" href="/blog.rss" />
-    <link rel="alternate" type="application/rss+xml" title="Eli Gundry's Feelings" href="/feelings.rss">
-    <link rel="icon" href={`data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>${latestFeeling.emoji}</text></svg>`} />
+    <link
+      rel="alternate"
+      type="application/rss+xml"
+      title="Eli Gundry's Blog"
+      href="/blog.rss"
+    />
+    <link
+      rel="alternate"
+      type="application/rss+xml"
+      title="Eli Gundry's Feelings"
+      href="/feelings.rss"
+    />
+    <link
+      rel="icon"
+      href={`data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>${latestFeeling.emoji}</text></svg>`}
+    />
     <link rel="preconnect" href="https://fonts.gtatic.com" crossorigin="true" />
-    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin="true" />
+    <link
+      rel="preconnect"
+      href="https://cdnjs.cloudflare.com"
+      crossorigin="true"
+    />
     <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
   </head>
   <body>
     <Header />
