--- a/astro/src/pages/blog.astro
+++ b/astro/src/pages/blog.astro
@@ -3,16 +3,24 @@ import dateFns from 'date-fns'
 import Layout from '../layouts/Layout.astro'
 
 const posts = (await Astro.glob('./blog/*.mdx')).sort((a, b) =>
-  dateFns.compareDesc(new Date(a.frontmatter.date), new Date(b.frontmatter.date))
+  dateFns.compareDesc(
+    new Date(a.frontmatter.date),
+    new Date(b.frontmatter.date)
+  )
 )
 ---
+
 <Layout title="Blog">
   <div class="paper prose">
-    {posts.map(post => (
-      <article>
-        <h2><a href={post.url}>{post.frontmatter.title}</a></h2>
-        <p>{post.frontmatter.description}</p>
-      </article>
-    ))}
+    {
+      posts.map((post) => (
+        <article>
+          <h2>
+            <a href={post.url}>{post.frontmatter.title}</a>
+          </h2>
+          <p>{post.frontmatter.description}</p>
+        </article>
+      ))
+    }
   </div>
 </Layout>
