--- a/astro/src/pages/resume.astro
+++ b/astro/src/pages/resume.astro
@@ -2,50 +2,50 @@
 import Layout from '../layouts/Layout.astro'
 import Experience from '../components/ResumeExperience.astro'
 
-const formatter = new Intl.ListFormat("en", {
-  style: "long",
-  type: "conjunction",
+const formatter = new Intl.ListFormat('en', {
+  style: 'long',
+  type: 'conjunction',
 })
 const resume = {
   basics: {
-    name: "Eli Gundry",
-    label: "Software Engineer",
-    email: "eligundry@gmail.com",
-    phone: "347.523.2652",
-    website: "https://eligundry.com",
+    name: 'Eli Gundry',
+    label: 'Software Engineer',
+    email: 'eligundry@gmail.com',
+    phone: '347.523.2652',
+    website: 'https://eligundry.com',
     location: {
-      city: "Astoria",
-      countryCode: "US",
-      region: "NY",
+      city: 'Astoria',
+      countryCode: 'US',
+      region: 'NY',
     },
   },
   work: [
     {
-      company: "Chord",
-      position: "Staff Engineer",
-      website: "https://chord.co/",
+      company: 'Chord',
+      position: 'Staff Engineer',
+      website: 'https://chord.co/',
       location: {
-        city: "New York",
-        countryCode: "US",
-        region: "NY",
+        city: 'New York',
+        countryCode: 'US',
+        region: 'NY',
       },
-      startDate: new Date("2022-02-07T05:00"),
+      startDate: new Date('2022-02-07T05:00'),
       endDate: null,
-      summary: "TBA",
+      summary: 'TBA',
       highlights: [],
     },
     {
-      company: "Talent Inc.",
-      position: "Senior Software Engineer",
-      website: "https://www.talentinc.com/",
+      company: 'Talent Inc.',
+      position: 'Senior Software Engineer',
+      website: 'https://www.talentinc.com/',
       location: {
-        city: "New York",
-        countryCode: "US",
-        region: "NY",
+        city: 'New York',
+        countryCode: 'US',
+        region: 'NY',
       },
-      startDate: new Date("2018-01-03T05:00"),
-      endDate: new Date("2021-12-17T05:00"),
-      summary: "",
+      startDate: new Date('2018-01-03T05:00'),
+      endDate: new Date('2021-12-17T05:00'),
+      summary: '',
       highlights: [
         `
         Tech lead for moving <a href="https://www.zipjob.com">ZipJob</a>
@@ -75,17 +75,17 @@ const resume = {
       ],
     },
     {
-      company: "Croscon",
-      position: "Principal Engineer",
-      website: "https://croscon.com",
+      company: 'Croscon',
+      position: 'Principal Engineer',
+      website: 'https://croscon.com',
       location: {
-        city: "New York",
-        countryCode: "US",
-        region: "NY",
+        city: 'New York',
+        countryCode: 'US',
+        region: 'NY',
       },
-      startDate: new Date("2015-04-01T05:00"),
-      endDate: new Date("2017-10-26T05:00"),
-      summary: "",
+      startDate: new Date('2015-04-01T05:00'),
+      endDate: new Date('2017-10-26T05:00'),
+      summary: '',
       highlights: [
         `
         Instilled a culture of
@@ -109,16 +109,16 @@ const resume = {
       ],
     },
     {
-      company: "Davey Tree",
-      position: "Web Development Consultant",
-      website: "https://www.davey.com",
+      company: 'Davey Tree',
+      position: 'Web Development Consultant',
+      website: 'https://www.davey.com',
       location: {
-        city: "Kent",
-        countryCode: "US",
-        region: "OH",
+        city: 'Kent',
+        countryCode: 'US',
+        region: 'OH',
       },
-      startDate: new Date("2014-11-01T05:00"),
-      endDate: new Date("2015-04-01T05:00"),
+      startDate: new Date('2014-11-01T05:00'),
+      endDate: new Date('2015-04-01T05:00'),
       summary: `
         Architected <a href="https://landscape.itreetools.org">iTree Landscape</a>
         using <a href="https://www.djangoproject.com">Django</a> and
@@ -129,16 +129,16 @@ const resume = {
       highlights: [],
     },
     {
-      company: "PC Surgeons",
-      position: "Computer Technician",
-      website: "http://pcsurgeons.net",
+      company: 'PC Surgeons',
+      position: 'Computer Technician',
+      website: 'http://pcsurgeons.net',
       location: {
-        city: "Kent",
-        countryCode: "US",
-        region: "OH",
+        city: 'Kent',
+        countryCode: 'US',
+        region: 'OH',
       },
-      startDate: new Date("2013-10-01T05:00"),
-      endDate: new Date("2014-12-01T05:00"),
+      startDate: new Date('2013-10-01T05:00'),
+      endDate: new Date('2014-12-01T05:00'),
       summary: `
         Repaired computers in a retail environment and provided support for
         customers' networks using <a href="https://en.wikipedia.org/wiki/Linux">Linux</a>
@@ -148,16 +148,16 @@ const resume = {
       printHide: false,
     },
     {
-      company: "Kent State University",
-      position: "Student IT Worker",
-      website: "https://www.kent.edu",
+      company: 'Kent State University',
+      position: 'Student IT Worker',
+      website: 'https://www.kent.edu',
       location: {
-        city: "Kent",
-        countryCode: "US",
-        region: "OH",
+        city: 'Kent',
+        countryCode: 'US',
+        region: 'OH',
       },
-      startDate: new Date("2013-05-01T05:00"),
-      endDate: new Date("2013-08-01T05:00"),
+      startDate: new Date('2013-05-01T05:00'),
+      endDate: new Date('2013-08-01T05:00'),
       summary: `
         Helped provide help desk support for
         <a href="http://www.kent.edu/CAS/">Kent State's College of Arts and Sciences</a>.
@@ -166,17 +166,17 @@ const resume = {
       printHide: true,
     },
     {
-      company: "Mindbox Studios",
-      position: "Web Developer",
-      website: "https://mindboxstudios.com",
+      company: 'Mindbox Studios',
+      position: 'Web Developer',
+      website: 'https://mindboxstudios.com',
       location: {
-        city: "Cincinnati",
-        countryCode: "US",
-        region: "OH",
+        city: 'Cincinnati',
+        countryCode: 'US',
+        region: 'OH',
       },
-      startDate: new Date("2012-08-01T05:00"),
-      endDate: new Date("2013-01-01T05:00"),
-      summary: "",
+      startDate: new Date('2012-08-01T05:00'),
+      endDate: new Date('2013-01-01T05:00'),
+      summary: '',
       highlights: [
         `
         Used <a href="http://php.net">PHP</a> with the
@@ -192,17 +192,17 @@ const resume = {
       printHide: true,
     },
     {
-      company: "Go Media",
-      position: "Web Developer",
-      website: "https://gomedia.us",
+      company: 'Go Media',
+      position: 'Web Developer',
+      website: 'https://gomedia.us',
       location: {
-        city: "Cleveland",
-        countryCode: "US",
-        region: "OH",
+        city: 'Cleveland',
+        countryCode: 'US',
+        region: 'OH',
       },
-      startDate: new Date("2011-05-01T05:00"),
-      endDate: new Date("2012-06-01T05:00"),
-      summary: "",
+      startDate: new Date('2011-05-01T05:00'),
+      endDate: new Date('2012-06-01T05:00'),
+      summary: '',
       highlights: [
         `
         Used <a href="http://php.net">PHP</a> with the
@@ -219,17 +219,17 @@ const resume = {
       ],
     },
     {
-      company: "Great Lakes Publishing",
-      position: "Web Development Intern",
-      website: "https://www.glpublishing.com",
+      company: 'Great Lakes Publishing',
+      position: 'Web Development Intern',
+      website: 'https://www.glpublishing.com',
       location: {
-        city: "Cleveland",
-        countryCode: "US",
-        region: "OH",
+        city: 'Cleveland',
+        countryCode: 'US',
+        region: 'OH',
       },
-      startDate: new Date("2010-09-01T05:00"),
-      endDate: new Date("2011-05-01T05:00"),
-      summary: "",
+      startDate: new Date('2010-09-01T05:00'),
+      endDate: new Date('2011-05-01T05:00'),
+      summary: '',
       highlights: [
         `
         Updated content for <a href="http://www.clevelandmagazine.com">
@@ -244,16 +244,16 @@ const resume = {
       ],
     },
     {
-      company: "eTek United",
-      position: "Traveling IT Support",
-      website: "https://www.linkedin.com/company/etek-united",
+      company: 'eTek United',
+      position: 'Traveling IT Support',
+      website: 'https://www.linkedin.com/company/etek-united',
       location: {
-        city: "Canton",
-        countryCode: "US",
-        region: "OH",
+        city: 'Canton',
+        countryCode: 'US',
+        region: 'OH',
       },
-      startDate: new Date("2010-03-01T05:00"),
-      endDate: new Date("2010-09-01T05:00"),
+      startDate: new Date('2010-03-01T05:00'),
+      endDate: new Date('2010-09-01T05:00'),
       summary: `
       Provided IT support for customers in their homes and setup various internet cafés around Ohio.
       `,
@@ -261,35 +261,35 @@ const resume = {
       printHide: true,
     },
     {
-      company: "RadioShack",
-      position: "Sales Associate",
-      website: "https://www.radioshack.com/",
+      company: 'RadioShack',
+      position: 'Sales Associate',
+      website: 'https://www.radioshack.com/',
       location: {
-        city: "Wooster",
-        countryCode: "US",
-        region: "OH",
+        city: 'Wooster',
+        countryCode: 'US',
+        region: 'OH',
       },
-      startDate: new Date("2009-06-01T05:00"),
-      endDate: new Date("2010-03-01T05:00"),
+      startDate: new Date('2009-06-01T05:00'),
+      endDate: new Date('2010-03-01T05:00'),
       summary:
-        "Sold consumer electronics and cell phones in a retail environment.",
+        'Sold consumer electronics and cell phones in a retail environment.',
       highlights: [],
       printHide: true,
     },
   ],
   education: [
     {
-      institution: "Kent State University",
-      area: "Computer Science",
-      studyType: "Coursework Towards BS",
-      startDate: new Date("2009-08-01T05:00"),
-      endDate: new Date("2015-05-01T05:00"),
+      institution: 'Kent State University',
+      area: 'Computer Science',
+      studyType: 'Coursework Towards BS',
+      startDate: new Date('2009-08-01T05:00'),
+      endDate: new Date('2015-05-01T05:00'),
       completed: false,
-      website: "https://www.kent.edu/",
+      website: 'https://www.kent.edu/',
       location: {
-        city: "Kent",
-        countryCode: "US",
-        region: "OH",
+        city: 'Kent',
+        countryCode: 'US',
+        region: 'OH',
       },
       summary: `
         Studied computer science, completed several internships &amp; attended
@@ -298,17 +298,17 @@ const resume = {
       `,
     },
     {
-      institution: "Wayne County Schools Career Center",
-      area: "Interactive Media Cohort",
-      startDate: new Date("2007-08-01T05:00"),
-      endDate: new Date("2009-05-01T05:00"),
+      institution: 'Wayne County Schools Career Center',
+      area: 'Interactive Media Cohort',
+      startDate: new Date('2007-08-01T05:00'),
+      endDate: new Date('2009-05-01T05:00'),
       completed: true,
       gpa: 3.3,
-      website: "http://www.wayne-jvs.k12.oh.us/",
+      website: 'http://www.wayne-jvs.k12.oh.us/',
       location: {
-        city: "Smithville",
-        countryCode: "US",
-        region: "OH",
+        city: 'Smithville',
+        countryCode: 'US',
+        region: 'OH',
       },
       summary: `
         High school vocational program where I learned the basics of
@@ -328,53 +328,53 @@ const resume = {
   ],
   skills: [
     {
-      name: "Languages",
-      level: "Master",
+      name: 'Languages',
+      level: 'Master',
       keywords: {
-        TypeScript: "https://www.typescriptlang.org/",
-        JavaScript: "https://en.wikipedia.org/wiki/JavaScript",
-        Go: "https://golang.org/",
-        PHP: "https://www.php.net/",
-        Python: "https://www.python.org/",
-        SQL: "https://en.wikipedia.org/wiki/SQL",
-        HTML: "https://en.wikipedia.org/wiki/HTML5",
-        CSS: "https://www.w3.org/Style/CSS/Overview.en.html",
+        TypeScript: 'https://www.typescriptlang.org/',
+        JavaScript: 'https://en.wikipedia.org/wiki/JavaScript',
+        Go: 'https://golang.org/',
+        PHP: 'https://www.php.net/',
+        Python: 'https://www.python.org/',
+        SQL: 'https://en.wikipedia.org/wiki/SQL',
+        HTML: 'https://en.wikipedia.org/wiki/HTML5',
+        CSS: 'https://www.w3.org/Style/CSS/Overview.en.html',
       },
     },
     {
-      name: "Frameworks",
-      level: "Master",
+      name: 'Frameworks',
+      level: 'Master',
       keywords: {
-        React: "https://reactjs.org/",
-        Flask: "https://www.palletsprojects.com/p/flask/",
-        Django: "https://www.djangoproject.com/",
-        Gin: "https://gin-gonic.com/",
-        "Gatsby.js": "https://www.gatsbyjs.org/",
-        WordPress: "https://wordpress.org/",
+        React: 'https://reactjs.org/',
+        Flask: 'https://www.palletsprojects.com/p/flask/',
+        Django: 'https://www.djangoproject.com/',
+        Gin: 'https://gin-gonic.com/',
+        'Gatsby.js': 'https://www.gatsbyjs.org/',
+        WordPress: 'https://wordpress.org/',
       },
     },
     {
-      name: "Tools",
-      level: "Master",
+      name: 'Tools',
+      level: 'Master',
       keywords: {
-        Vim: "https://www.vim.org/",
-        Docker: "https://www.docker.com/",
-        Git: "https://git-scm.com/",
-        SaltStack: "https://www.saltstack.com/",
-        "GitHub Actions": "https://github.com/features/actions",
-        Serverless: "https://serverless.com/",
+        Vim: 'https://www.vim.org/',
+        Docker: 'https://www.docker.com/',
+        Git: 'https://git-scm.com/',
+        SaltStack: 'https://www.saltstack.com/',
+        'GitHub Actions': 'https://github.com/features/actions',
+        Serverless: 'https://serverless.com/',
       },
     },
     {
-      name: "Love Hate",
-      level: "Master",
+      name: 'Love Hate',
+      level: 'Master',
       keywords: {
-        Ansible: "https://www.ansible.com/",
-        SQLAlchemy: "https://www.sqlalchemy.org/",
-        jQuery: "https://jquery.com/",
-        Okta: "https://www.okta.com/",
-        Jenkins: "https://jenkins.io/",
-        "Google Tag Manager": "https://tagmanager.google.com/",
+        Ansible: 'https://www.ansible.com/',
+        SQLAlchemy: 'https://www.sqlalchemy.org/',
+        jQuery: 'https://jquery.com/',
+        Okta: 'https://www.okta.com/',
+        Jenkins: 'https://jenkins.io/',
+        'Google Tag Manager': 'https://tagmanager.google.com/',
       },
     },
   ],
@@ -397,37 +397,46 @@ const resume = {
   ],
 }
 ---
+
 <Layout title="Resume">
   <div class="paper">
     <section class="prose">
       <header>
-        <h2 class="mt-0 mb-4 border-b-2 border-b-accent">Skills & Technologies</h2>
+        <h2 class="mt-0 mb-4 border-b-2 border-b-accent">
+          Skills & Technologies
+        </h2>
       </header>
       <ul>
-        {resume.skills.map((section) => {
-          let prefix
+        {
+          resume.skills.map((section) => {
+            let prefix
 
-          switch (section.name) {
-            case 'Languages':
-              prefix = 'Fluent in'
-              break
-            case 'Frameworks':
-              prefix = 'Built complex web applications using'
-              break
-            case 'Tools':
-              prefix = 'Loves using'
-              break
-            case 'Love Hate':
-              prefix = 'Has a love-hate relationship (that I will happily explain) with'
-              break
-          }
+            switch (section.name) {
+              case 'Languages':
+                prefix = 'Fluent in'
+                break
+              case 'Frameworks':
+                prefix = 'Built complex web applications using'
+                break
+              case 'Tools':
+                prefix = 'Loves using'
+                break
+              case 'Love Hate':
+                prefix =
+                  'Has a love-hate relationship (that I will happily explain) with'
+                break
+            }
 
-          const skillsLinks = formatter.format(Object.entries(section.keywords).map(
-            ([name, url]) => `<a href="${url}" itemprop="knowsAbout">${name}</a>`
-          ))
+            const skillsLinks = formatter.format(
+              Object.entries(section.keywords).map(
+                ([name, url]) =>
+                  `<a href="${url}" itemprop="knowsAbout">${name}</a>`
+              )
+            )
 
-          return <li set:html={`${prefix} ${skillsLinks}`} />
-        })}
+            return <li set:html={`${prefix} ${skillsLinks}`} />
+          })
+        }
       </ul>
     </section>
 
@@ -435,47 +444,51 @@ const resume = {
       <header>
         <h2 class="my-4 border-b-2 border-b-accent">Work</h2>
       </header>
-      {resume.work.map(exp => (
-        <Experience
-          variant="work"
-          name={exp.company}
-          position={exp.position}
-          url={exp.website}
-          startDate={exp.startDate}
-          endDate={exp.endDate}
-          location={exp.location}
-          summary={exp.summary}
-          highlights={exp.highlights}
-        />
-      ))}
+      {
+        resume.work.map((exp) => (
+          <Experience
+            variant="work"
+            name={exp.company}
+            position={exp.position}
+            url={exp.website}
+            startDate={exp.startDate}
+            endDate={exp.endDate}
+            location={exp.location}
+            summary={exp.summary}
+            highlights={exp.highlights}
+          />
+        ))
+      }
     </section>
 
-  <section class="prose">
-    <header>
-      <h2 class="my-4 border-b-2 border-b-accent">Education</h2>
-    </header>
-    {resume.education.map(exp => (
-      <Experience
-        variant="education"
-        name={exp.institution}
-        url={exp.website}
-        startDate={exp.startDate}
-        endDate={exp.endDate}
-        position={[exp.studyType, exp.area].filter((i) => !!i).join(' - ')}
-        location={exp.location}
-        summary={exp.summary}
-        highlights={[]}
-      />
-    ))}
-  </section>
+    <section class="prose">
+      <header>
+        <h2 class="my-4 border-b-2 border-b-accent">Education</h2>
+      </header>
+      {
+        resume.education.map((exp) => (
+          <Experience
+            variant="education"
+            name={exp.institution}
+            url={exp.website}
+            startDate={exp.startDate}
+            endDate={exp.endDate}
+            position={[exp.studyType, exp.area].filter((i) => !!i).join(' - ')}
+            location={exp.location}
+            summary={exp.summary}
+            highlights={[]}
+          />
+        ))
+      }
+    </section>
 
-  <section class="prose">
-    <header>
-      <h2 class="my-4 border-b-2 border-b-accent">Activities & Interests</h2>
-      <ul>
-        {resume.activitesInterests.map(ai => <li set:html={ai} />)}
-      </ul>
-    </header>
-  </section>
+    <section class="prose">
+      <header>
+        <h2 class="my-4 border-b-2 border-b-accent">Activities & Interests</h2>
+        <ul>
+          {resume.activitesInterests.map((ai) => <li set:html={ai} />)}
+        </ul>
+      </header>
+    </section>
   </div>
 </Layout>
